--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,25 @@ html{
 }
 
 section{
-  background-color: rgb(18, 26, 31);
+  background-color: rgb(210, 180, 140);
   min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: -45px;
 }
 
 .container{
   width: 90%;
   max-width: 400px;
-  background-color: rgb(39, 55, 59);
+  background-color: rgb(240, 230, 140);
   border-radius: 8px;
   overflow: hidden;
 }
 
 .display{
-  background-color: rgb(182, 182, 182);
+  background-color: rgb(189, 183, 107);
   height: 100px;
   width: 100%;
   text-align: right;
@@ -51,7 +52,7 @@ section{
 }
 
 .all-buttons{
-  color: whitesmoke;
+  color: rgb(169, 169, 169);
   display: grid;
   grid-template: repeat(4, 1fr) / repeat(4, 1fr);
 }
@@ -68,9 +69,30 @@ section{
 }
 
 .button:hover{
-  background-color:rgb(37, 69, 77);
+  background-color:rgb(255, 222, 173);
 }
 
 .btn-0{
   grid-column: 1/3;
+}
+
+.sign{
+  background-color: #FFE4B5;
+}
+
+.official {
+  background-color: rgb(210, 180, 140);
+}
+
+.official h1{
+  padding-top: 35px;
+  text-align: center;
+  font-weight: 700;
+  color:rgba(219, 231, 110, 0.452);
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.official h1:hover{
+  color:rgba(205, 219, 44, 0.884);
 }
